# UPX-Tools

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  LICENSE  README.md  package.json
.github/workflows/: build.yml  ci.yml  release.yml
icons/: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
ui/: index.html
ui/css/: style.css  tailwind-custom.css
ui/js/: main.js
