[package]
name = "upx-gui"
version = "1.0.0"
description = "UPX 可视化加壳脱壳工具"
authors = ["ASLant"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
encoding_rs = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true      # 移除调试符号
opt-level = "z"   # 优化大小
lto = true        # 链接时优化
codegen-units = 1 # 更好的优化
panic = "abort"   # 减小panic处理代码
